experimental/internal/lexer/testdata/braces/stray-open.proto.stderr.txt
error: encountered unmatched `[` delimiter
  --> testdata/braces/stray-open.proto:2:5
   |
 2 |     [
   |     ^ expected a closing `]`

encountered 1 error
